Finally fixed background image and colour clipping issues I was having.. I hope

--- a/styles/home.css
+++ b/styles/home.css
@@ -75,6 +75,7 @@ input, select, button {
 
 #summonerContainer {
     width: 100%;
+    height: calc(100% - 50px);
     box-sizing: border-box;
     padding: 10px;
     opacity: .8;
@@ -141,7 +142,7 @@ input, select, button {
 
 #matchList {
     width: 100%;
-    height: 100%;
+    background: #1e1f33;
     box-sizing: border-box;
     display: flex;
     justify-content: space-around;
